--- a/templates/reply_text.xml
+++ b/templates/reply_text.xml
@@ -1,4 +1,4 @@
-<!--$def with (toUser,fromUser,createTime,content)-->
+$def with (toUser,fromUser,createTime,content)
 <xml>
 <ToUserName><![CDATA[$toUser]]></ToUserName>
 <FromUserName><![CDATA[$fromUser]]></FromUserName>
